@@ -2,6 +2,12 @@ This documents significant changes in the 1.0 branch of ksh 93u+m.
 For full details, see the git log at: https://github.com/ksh93/ksh/tree/1.0
 Uppercase BUG_* IDs are shell bug IDs as used by the Modernish shell library.
 
+2023-05-28:
+
+- Fixed a bug, introduced on 2020-06-08 and exacerbated on 2022-07-02, where
+  the exit status of a script did not reflect the signal with the 9th bit
+  set if the script exited on receiving a signal and an EXIT trap was set.
+
 2023-05-27:
 
 - Fixed a bug in the handling of backslashes in pathname expansion patterns
